font size and spacing issue fix

--- a/src/web/themes/custom/bcgov_teachers/css/style.css
+++ b/src/web/themes/custom/bcgov_teachers/css/style.css
@@ -10948,7 +10948,7 @@ h2 {
   position: relative;
   display: flex;
   align-items: flex-end;
-  min-height: 350px;
+  min-height: 340px;
   padding: 0;
   background-position: top center;
   background-size: cover;
@@ -11004,6 +11004,7 @@ h2 {
 @media (min-width: 768px) {
   .banner-content .banner-text {
     padding: 0;
+    margin-top: -70px;
   }
 }
 .banner-content .banner-text h1 {
@@ -12872,10 +12873,16 @@ header .region-header .navbar-brand .site-title {
     line-height: 1.6rem;
   }
 }
+@media (min-width: 993px) {
+  header .region-header .navbar-brand .site-title {
+    padding: 0 15px 0 54px;
+  }
+}
 @media (min-width: 991px) {
   header .region-header .navbar-brand .site-title {
     font-size: 1.7rem;
     line-height: 1.7rem;
+    padding: 0 15px 0 54px;
   }
 }
 @media (min-width: 1195px) {
@@ -13254,6 +13261,7 @@ header .navbar .menu--main .nav-item {
 header .navbar .menu--main .nav-link {
   display: table-cell;
   vertical-align: middle;
+  font-size: 16px;
 }
 @media (max-width: 767px) {
   header .navbar .menu--main .nav-link {
@@ -13305,14 +13313,14 @@ header .navbar .menu--main a.active, header .navbar .menu--main a.is-active {
   }
 }
 .paragraph--type--grade-access .description h1 {
-  font-size: 1.6rem;
-  line-height: 1.6rem;
+  font-size: 30px;
+  line-height: normal;
   font-weight: 400;
 }
 @media (min-width: 768px) {
   .paragraph--type--grade-access .description h1 {
-    font-size: 2.6rem;
-    line-height: 2.6rem;
+    font-size: 40px;
+    line-height: normal;
   }
 }
 @media (min-width: 768px) {
@@ -13408,9 +13416,13 @@ header .navbar .menu--main a.active, header .navbar .menu--main a.is-active {
   margin-bottom: 0;
 }
 .paragraph--type--grade-access .paragraph--type--grade-access-blocks .field--name-field-grade-access-block-title strong {
-  font-size: 4.8rem;
+  font-size: 75px;
   line-height: 4.8rem;
   vertical-align: middle;
+  font-weight: 700;
+  font-family: "BCSans-Bold", "BC Sans Bold", "myriad-pro", Calibri, "Helvetica Neue", Arial, "Noto Sans", "sans serif";
+  margin-top: 6px;
+  display: inline-block;
 }
 .paragraph--type--grade-access .paragraph--type--grade-access-blocks .field--name-field-grade-access-body p {
   font-size: 1rem;
