--- a/src/web/themes/custom/bcgov_teachers/scss/navigation/_navbar.scss
+++ b/src/web/themes/custom/bcgov_teachers/scss/navigation/_navbar.scss
@@ -108,6 +108,7 @@ header {
       .nav-link {
         display: table-cell;
         vertical-align: middle;
+        font-size: 16px;
 
         @media (max-width: 767px) {
           display: block;
